# my_homeworks

SQL_week_1/: first_db_requests.sql
SQL_week_2/: marvel_nm_requests.sql
SQL_week_3/: barbershop_bd.sql
SQL_week_4/: barbershop.py  barbershop.sql
SQL_week_5/: barbershop_peewee.db  barbershop_peewee.db-shm  barbershop_peewee.db-wal  homework_35.py
SQL_week_6/: app.py  barbershop_flask.db
SQL_week_7/: app.py  auth.py  init_db.py  models.py  pyproject.toml
SQL_week_7/blueprints/appointments/: routes.py
SQL_week_7/blueprints/masters/: routes.py
py_week_1/: lesson_1.py
py_week_10/: password_decorator.py
py_week_11/: file_handler.py
py_week_12/: marvel_processed.py
py_week_13/: image_compressor.py  shakal.heic
py_week_14/: file_classes.py  file_tests.py
py_week_15/: cities_serializer.py  city.py  city_game.py  json_reader.py  main.py  manager.py
py_week_16/: patterns.py
py_week_2/: lesson_2.py
py_week_3/: main.py
py_week_4/: main.py
py_week_5/: main.py
py_week_6_7/: GitHub repository PATH.txt
py_week_8/: image_optimizer.py  requirements.txt
py_week_9/: files_utils.py  files_utils_tests.py
