[project]
name = "sql-week-7"
version = "0.1.0"
description = ""
authors = [
    {name = "Ollie",email = "Ollie_0@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "peewee (>=3.18.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
